--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -760,6 +760,8 @@ on property:init.svc.bootanim=running
     write /sys/class/leds/wled/brightness 4095
 
 on property:vold.decrypt=trigger_restart_framework
+    stop camera-provider-2-4
+    start camera-provider-2-4
     # start qcom-c_main-sh
     start config_bluetooth
 
@@ -1117,7 +1119,7 @@ service qseeproxydaemon /vendor/bin/qseeproxydaemon
 
 #start camera server as daemon
 service qcamerasvr /vendor/bin/mm-qcamera-daemon
-    class late_start
+    class main
     user camera
     group camera system inet input graphics
 
