griffin: Hack vndk libs for our oreo camera blob
Our camera blobs doesn't meet VNDK requirement, in pie google restricts
some code to vendor modules on which our oreo blob depend on, missing symbol errors:

10-04 20:02:36.991  2189  2189 E HAL     : dlopen failed: cannot locate symbol "_ZN7android13AppOpsManagerC1Ev" referenced by "/system/lib/libsensor.so"...
10-04 20:02:36.991  2189  2189 E CamProvider@2.4-impl: Could not load camera HAL module: -22 (Invalid argument)

10-04 20:04:45.437  2750  2750 E HAL     : dlopen failed: cannot locate symbol "qtaguid_tagSocket" referenced by "/system/lib/libandroid_runtime.so"...
10-04 20:04:45.437  2750  2750 E CamProvider@2.4-impl: Could not load camera HAL module: -22 (Invalid argument)

Restrictions introduced in following commits:
1. https://android.googlesource.com/platform/frameworks/native/+/47f876b74be0a2d6d417f5ff385f85d835a97fe9
2. https://android.googlesource.com/platform/system/core/+/94223374c87571a83c884f8845e2de52c9fd9c3f

Bind mount to the libs build for system in vndk/vndk-sp packages to satisfy camera dependency.

Change-Id: I99403d988de6a415ddbb7ddd75f3e5fc6a140cde
Signed-off-by: Erfan Abdi <erfangplus@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -397,6 +397,10 @@ on late-fs
     # Mount RW partitions which need run fsck
     mount_all /vendor/etc/fstab.qcom --late
 
+    # Hack for oreo camera blobs
+    mount none /vendor/lib/full/libbinder.so /system/lib/vndk-28/libbinder.so bind
+    mount none /vendor/lib/full/libcutils.so /system/lib/vndk-sp-28/libcutils.so bind
+
 on post-fs
     mkdir /persist/camera 0755 oem_5004 oem_5004
     mkdir /persist/camera/focus 0775 camera oem_5004
