griffin: use ro.vendor.hw.device
Change-Id: Ia3f9ba4b4b2f60bb208995e9b6a4ff2f860763bd
Signed-off-by: Erfan Abdi <erfangplus@gmail.com>

--- a/rootdir/etc/init.griffin.rc
+++ b/rootdir/etc/init.griffin.rc
@@ -42,7 +42,7 @@ on property:ro.boot.hardware.sku=XT1650-03
 on property:ro.boot.hardware.sku=XT1650-05
     setprop ro.telephony.default_network "22,20"
 
-on property:ro.hw.device=sheridan
+on property:ro.vendor.hw.device=sheridan
     setprop persist.audio.calfile0 "/vendor/etc/acdbdata/sheridan/Bluetooth_cal.acdb"
     setprop persist.audio.calfile1 "/vendor/etc/acdbdata/sheridan/General_cal.acdb"
     setprop persist.audio.calfile2 "/vendor/etc/acdbdata/sheridan/Global_cal.acdb"
@@ -51,7 +51,7 @@ on property:ro.hw.device=sheridan
     setprop persist.audio.calfile5 "/vendor/etc/acdbdata/sheridan/Headset_cal.acdb"
     setprop persist.audio.calfile6 "/vendor/etc/acdbdata/sheridan/Speaker_cal.acdb"
 
-on property:ro.hw.device=griffin
+on property:ro.vendor.hw.device=griffin
     setprop persist.audio.calfile0 "/vendor/etc/acdbdata/griffin/Bluetooth_cal.acdb"
     setprop persist.audio.calfile1 "/vendor/etc/acdbdata/griffin/General_cal.acdb"
     setprop persist.audio.calfile2 "/vendor/etc/acdbdata/griffin/Global_cal.acdb"
